<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/ras_components_bb_spacing_very_large">

    <com.redairship.ocbc.bb.components.views.textviews.BBOpenSansTextView
        android:id="@+id/tv_title"
        style="@style/ras_components_BBBottomSheetHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="20sp"
        android:paddingVertical="@dimen/ras_components_bb_spacing_normal"
        tools:text="insufficient_balance" />

    <com.redairship.ocbc.bb.components.views.textviews.BBOpenSansTextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/insufficient_balance_description"
        android:textSize="16sp"
        android:textColor="@color/ras_components_bb_color_grey_700"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ras_components_bb_spacing_normal"
        android:layout_marginBottom="?attr/ras_components_themeSpacingLarge"
        android:paddingVertical="?attr/ras_components_themeSpacingLarge"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.redairship.ocbc.bb.components.views.textviews.BBOpenSansTextView
            android:id="@+id/bt_okay"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="@dimen/size_8dp"
            android:background="@drawable/edittext_grey700_round_corner"
            android:textSize="@dimen/ras_components_bb_spacing_normal"
            android:textColor="@color/ras_components_bb_color_grey_700"
            android:text="@string/out_of_date_update_buttontitle"
            app:ras_components_textWeight="semi_bold" />

        <com.redairship.ocbc.bb.components.views.buttons.BBPrimaryButton
            android:id="@+id/bt_changeaccount"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/size_8dp"
            app:ras_components_label="@string/change_account" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>