<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">
    <data>
        <variable
            name="viewModel"
            type="com.redairship.ocbc.transfer.presentation.local.LocalTransferViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/localtransfer_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lly_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:background="@drawable/localtransfer_bg">

            <com.redairship.ocbc.bb.components.views.textviews.BBOpenSansTextView
                android:id="@+id/tv_standard_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/ras_components_bb_spacing_very_large"
                android:layout_marginStart="@dimen/ras_components_bb_spacing_very_large"
                android:text="@string/local_transfer"
                android:textColor="@color/ras_components_bb_color_white"
                android:textSize="@dimen/ras_components_bb_text_size_26_sp"
                app:layout_constraintTop_toBottomOf="@id/v_standard_header"
                app:ras_components_textWeight="bold" />

            <com.redairship.ocbc.bb.components.views.textviews.BBOpenSansTextView
                android:id="@+id/transferfrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ras_components_bb_spacing_very_large"
                android:layout_marginRight="@dimen/ras_components_bb_spacing_very_large"
                app:layout_constraintTop_toBottomOf="@id/tv_standard_header"
                android:text="@string/transfer_from"
                />
<!--            app:componentstitle="@string/please_select"-->
            <com.redairship.ocbc.bb.components.views.textviews.BBOpenSansTextView
                android:id="@+id/transferto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ras_components_bb_spacing_very_large"
                android:layout_marginRight="@dimen/ras_components_bb_spacing_very_large"
                android:layout_marginTop="@dimen/ras_components_bb_spacing_large"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/transferfrom"
                android:text="@string/transfer_to"
                />
<!--            app:componentstitle="@string/please_select"-->
            <com.redairship.ocbc.bb.components.views.headers.BBStandardHeader
                android:id="@+id/v_standard_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingTop="@dimen/ras_components_bb_spacing_large"
                tools:ignore="MissingConstraints">

            </com.redairship.ocbc.bb.components.views.headers.BBStandardHeader>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/transferto"
                app:layout_constraintBottom_toBottomOf="parent">
                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    layout="@layout/dialog_bottom_sheet_short_content" />
                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    layout="@layout/dialog_bottom_sheet_another_ocbc_ac" />
            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

