<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.redairship.ocbc.transfer.presentation.local.LocalTransferViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ras_passportauth_bg"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.redairship.ocbc.bb.components.views.headers.BBStandardHeader
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/ras_components_bb_color_transparent"
                app:ras_components_showDivider="false"
                app:ras_components_showEndButton="false"
                app:ras_components_showStartButton="false" />

            <com.redairship.ocbc.bb.components.views.textviews.BBOpenSansTextView
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginHorizontal="@dimen/ras_components_bb_spacing_large"
                android:text="@string/header_btn_logout"
                android:textColor="#0084FF"
                android:textSize="@dimen/ras_components_bb_text_size_14_sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="?attr/ras_components_themeSpacingLarge">

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/scrollview_detail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/ras_components_bb_spacing_normal"
                    android:clickable="false"
                    android:fadingEdgeLength="50dp"
                    android:fillViewport="true"
                    android:focusable="false"
                    android:overScrollMode="never"
                    android:requiresFadingEdge="vertical"
                    app:layout_constraintBottom_toTopOf="@id/bottom_layout"
                    app:layout_constraintTop_toTopOf="parent">

                    <include layout="@layout/transferto_confirmation_top" />

                </androidx.core.widget.NestedScrollView>

                <LinearLayout
                    android:id="@+id/bottom_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/ras_components_bb_spacing_very_large"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.redairship.ocbc.bb.components.views.textviews.BBOpenSansTextView
                        android:id="@+id/bt_newtransfer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/size_8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_grey700_transparant_round_corner"
                        android:gravity="center"
                        android:text="@string/new_transfer"
                        android:textColor="@color/ras_components_bb_color_grey_700"
                        android:textSize="@dimen/ras_components_bb_spacing_normal"
                        app:ras_components_textWeight="semi_bold" />

                    <com.redairship.ocbc.bb.components.views.buttons.BBPrimaryButton
                        android:id="@+id/bt_done"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/size_8dp"
                        android:layout_weight="1"
                        app:ras_components_label="@string/done_btn" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

